Reading data from database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 
+#JPA
+spring.datasource.jdbcUrl=jdbc:postgresql://localhost:5432/spring_batch
+spring.datasource.username=postgres
+spring.datasource.password=123456
+app.datasource.jdbcUrl=jdbc:postgresql://localhost:5432/app
+app.datasource.username=postgres
+app.datasource.password=123456
+
+spring.batch.initialize-schema: always
+spring.batch.jdbc.initialize-schema=always
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.format_sql=true
+
+
